# open-syobon

./: CMakeLists.txt  INSTALL  Makefile.am  loadg.cpp
cmake/: FindGettextTools.cmake  FindIntl.cmake  FindSDL_gfx.cmake
cmake/FindGettextTools/: LICENSE.txt
include/: DxLib.h  main.h
lang/: en.po  jp.po
src/: DxLib.cpp  loadg.cpp  main.cpp
